--- a/Recommendation_Outline.ipynb
+++ b/Recommendation_Outline.ipynb
@@ -51,7 +51,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 360,
    "metadata": {},
    "outputs": [
     {
@@ -92,60 +92,60 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>FYWN1wneV18bWNgQjJ2GNg</td>\n",
-       "      <td>\"Dental by Design\"</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\"4855 E Warner Rd, Ste B9\"</td>\n",
-       "      <td>Ahwatukee</td>\n",
-       "      <td>AZ</td>\n",
-       "      <td>85044</td>\n",
-       "      <td>33.330690</td>\n",
-       "      <td>-111.978599</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>22</td>\n",
+       "      <th>800</th>\n",
+       "      <td>o7AiTlyWUrBSzdz6oMHj5w</td>\n",
+       "      <td>\"Excalibur Hotel\"</td>\n",
+       "      <td>The Strip</td>\n",
+       "      <td>\"Excalibur Hotel And Casino, 3850 Las Vegas Bl...</td>\n",
+       "      <td>Las Vegas</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>89109</td>\n",
+       "      <td>36.098732</td>\n",
+       "      <td>-115.174726</td>\n",
+       "      <td>2.5</td>\n",
+       "      <td>2504</td>\n",
        "      <td>1</td>\n",
-       "      <td>Dentists;General Dentistry;Health &amp; Medical;Or...</td>\n",
+       "      <td>Hotels;Event Planning &amp; Services;Casinos;Resor...</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>He-G7vWjzVUysIKrfNbPUQ</td>\n",
-       "      <td>\"Stephen Szabo Salon\"</td>\n",
-       "      <td>NaN</td>\n",
-       "      <td>\"3101 Washington Rd\"</td>\n",
-       "      <td>McMurray</td>\n",
-       "      <td>PA</td>\n",
-       "      <td>15317</td>\n",
-       "      <td>40.291685</td>\n",
-       "      <td>-80.104900</td>\n",
+       "      <th>801</th>\n",
+       "      <td>PgJgpW4TKQ8IoALH2Yq-zA</td>\n",
+       "      <td>\"Bayside Buffet at Mandalay Bay\"</td>\n",
+       "      <td>The Strip</td>\n",
+       "      <td>\"3950 S Las Vegas Blvd\"</td>\n",
+       "      <td>Las Vegas</td>\n",
+       "      <td>NV</td>\n",
+       "      <td>89109</td>\n",
+       "      <td>36.091219</td>\n",
+       "      <td>-115.175804</td>\n",
        "      <td>3.0</td>\n",
-       "      <td>11</td>\n",
+       "      <td>1033</td>\n",
        "      <td>1</td>\n",
-       "      <td>Hair Stylists;Hair Salons;Men's Hair Salons;Bl...</td>\n",
+       "      <td>Arts &amp; Entertainment;Restaurants;Buffets;Ameri...</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "              business_id                   name neighborhood  \\\n",
-       "0  FYWN1wneV18bWNgQjJ2GNg     \"Dental by Design\"          NaN   \n",
-       "1  He-G7vWjzVUysIKrfNbPUQ  \"Stephen Szabo Salon\"          NaN   \n",
+       "                business_id                              name neighborhood  \\\n",
+       "800  o7AiTlyWUrBSzdz6oMHj5w                 \"Excalibur Hotel\"    The Strip   \n",
+       "801  PgJgpW4TKQ8IoALH2Yq-zA  \"Bayside Buffet at Mandalay Bay\"    The Strip   \n",
        "\n",
-       "                      address       city state postal_code   latitude  \\\n",
-       "0  \"4855 E Warner Rd, Ste B9\"  Ahwatukee    AZ       85044  33.330690   \n",
-       "1        \"3101 Washington Rd\"   McMurray    PA       15317  40.291685   \n",
+       "                                               address       city state  \\\n",
+       "800  \"Excalibur Hotel And Casino, 3850 Las Vegas Bl...  Las Vegas    NV   \n",
+       "801                            \"3950 S Las Vegas Blvd\"  Las Vegas    NV   \n",
        "\n",
-       "    longitude  stars  review_count  is_open  \\\n",
-       "0 -111.978599    4.0            22        1   \n",
-       "1  -80.104900    3.0            11        1   \n",
+       "    postal_code   latitude   longitude  stars  review_count  is_open  \\\n",
+       "800       89109  36.098732 -115.174726    2.5          2504        1   \n",
+       "801       89109  36.091219 -115.175804    3.0          1033        1   \n",
        "\n",
-       "                                          categories  \n",
-       "0  Dentists;General Dentistry;Health & Medical;Or...  \n",
-       "1  Hair Stylists;Hair Salons;Men's Hair Salons;Bl...  "
+       "                                            categories  \n",
+       "800  Hotels;Event Planning & Services;Casinos;Resor...  \n",
+       "801  Arts & Entertainment;Restaurants;Buffets;Ameri...  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 360,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -338,14 +338,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 361,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "image/png": "iVBORw0KGgoAAAANSUhEUgAAAYsAAAEWCAYAAACXGLsWAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAAADl0RVh0U29mdHdhcmUAbWF0cGxvdGxpYiB2ZXJzaW9uIDIuMS4wLCBo\ndHRwOi8vbWF0cGxvdGxpYi5vcmcvpW3flQAAHFNJREFUeJzt3XucVdV99/HPtwgiAnJVUdDxQqKR\nRoI8xlsMMUnrLVETTaX6KJonmtinqUmt1dimtk+MrY2t1ydWjaLG4N1ojTEaq40R1EACCPECKlFE\nReSOgoK//rHX4GacmX2GmXP2mTPf9+t1XmfvtW+/BWfmN2uvs9dSRGBmZtaePyo7ADMzq39OFmZm\nVsjJwszMCjlZmJlZIScLMzMr5GRhZmaFnCzMzKyQk4U1DEkHSZoqaYWkpZIel/S/0rZJkn7dgXM1\nSQpJW3Qinj6Szpc0T9IaSQskXSepaXPPWeF1J0haWM1rWM/jZGENQdJA4D7gcmAIsCPwj8C6EsO6\nA/gi8OfANsDewAzgsyXGZLZZnCysUXwEICKmRMSGiHgnIh6MiNmS9gSuAvaXtFrScgBJR0j6naSV\nkl6RdH7ufL9K78vTMfunY06V9IykZZJ+IWnn1oKR9Dng88BREfGbiFgfESsi4sqI+FHaZwdJ96ZW\n0HxJX8sdP1nS93Lrm7QWUivlLEmzU0vqVkl9JW0N/BzYIcW9Ol1nX0nTU13fkPRvnf4Xtx7FycIa\nxfPABkk3SDpM0uDmDRHxDPB1YFpE9I+IQWnTGuAkYBBwBPANSUenbQen90HpmGlp23eALwHDgceA\nKW3E8zngqYh4pZ2YpwALgR2AY4HvS+pIq+MrwKHALsDHgUkRsQY4DFiU4u4fEYuAS4FLI2IgsBtw\nWweuY+ZkYY0hIlYCBwEBXAO8mf5q366dYx6NiKcj4v2ImE32y/vT7VzmdODCiHgmItYD3wfGttG6\nGAq81taJJI1K8f5tRKyNiJnAtcD/br+mm7gsIhZFxFLgP4Gx7ez7HrC7pGERsToinujAdcycLKxx\npF/ikyJiJDCG7C/2S9raX9InJT0i6U1JK8haH8PaucTOwKWSlqdbWUsBkfWPtPQWMKKdc+0ALI2I\nVbmyP7Rxrra8nlt+G+jfzr5fJbtV96yk30g6sgPXMXOysMYUEc8Ck8mSBmQtjpZ+AtwLjIqIbcj6\nNdTO/q8Ap0fEoNxrq4iY2sq+vwT2lTSyjRAXAUMkDciV7QS8mpbXAP1y27Zv4zyt+VDsETEvIiYC\n2wL/AtyR+jfMKuJkYQ1B0h6S/rr5l3O6zTMRaL7d8gYwUlKf3GEDyP66XytpX7JvLTV7E3gf2DVX\ndhVwrqS90jW2kXRca/FExC+Bh4C7Je0jaQtJAyR9XdKpqS9jKnBh6pj+ONlf/zenU8wEDpc0RNL2\nwJkd+Od4AxgqaZvcv8+JkoZHxPvA8lS8oQPntB7OycIaxSrgk8CTktaQJYk5wF+n7f8FzAVel7Qk\nlZ0B/JOkVcB3yXX6RsTbwAXA4+m2034RcTfZX+W3SFqZzn9YOzEdC9wP3AqsSPuPJ2t1QJbMmsha\nGXcD/xARD6VtNwGzgAXAg+kcFUmtqinAiyn2Hcg6wudKWk3W2X18RKyt9Jxm8uRHZmZWxC0LMzMr\n5GRhZmaFnCzMzKyQk4WZmRXa7BE1682wYcOiqamp7DDMzLqVGTNmLImI4UX7NUyyaGpqYvr06WWH\nYWbWrUj6QyX7NUyyWP/mUt784Y/LDsPMrKaGf+PEmlzHfRZmZlbIycLMzAo5WZiZWaFSk4WkY9I8\nx3uk9b+QNDP3mpO271lmnGZmPV3ZLYuJwK+B4wHSlJNjm19kw0ffnGY6MzOzkpSWLCT1Bw4kG5b5\n+Fa2H0w2beQZNQ7NzMxaKLNlcTTwQEQ8DyyVNK55g6RBwPXAyWm6zFZJOi1NQj/9rdVt7mZmZp1U\nZrKYCNySlm9J681+CPw4Ih5v7wQRcXVEjI+I8UP7D6xSmGZmVspDeZKGAocAYyQF0AsISWcDJ5FN\nCNORievNzKyKympZHAvcGBE7R0RTRIwCXgIOJpud7ISIWF9SbGZm1kJZw31MBP65RdmdwCRga+Au\nSfltfxkRj9UmNDMza6mUZBERE1opuywtnlLbaMzMrEjDDCS4xfAhNRtQy8yspyn7oTwzM+sGnCzM\nzKyQk4WZmRVqmD6LdxcvYOEVp5YdhlldG/l/rys7BOum3LIwM7NCThZmZlaolGSR5qi4OLd+lqTz\nJU2QNK3FvltIekPSiNpHamZmUF7LYh3wJUnDWpT/ChgpqSlX9jlgTkS8VqPYzMyshbKSxXrgauBb\n+cKIeB+4HfizXPHxwJTahWZmZi2V2WdxJXCCpG1alE8hTYYkaUvgcLJxoz4kP5/F0tVrqxqsmVlP\nVlqySJMa3Qh8s0X5b4D+kj4KHAY8ERHL2jjHxvkshvTvW/WYzcx6qrKfs7gE+C3ZrHh5t5C1LvbE\nt6DMzEpX6ldnI2IpcBvZPNx5U4ATySZIurfWcZmZ2abq4TmLi4FNvhUVEb8H3gb+KyLWlBKVmZlt\nVNZ8Fv1zy28A/VrZZ++aBmVmZm2qh5aFmZnVubI7uLtMn22bPEiamVmVuGVhZmaFnCzMzKxQw9yG\nWrVkHo9ce0TZYZhVxWf+z8/KDsF6OLcszMyskJOFmZkVcrIwM7NCZU1+NFLSPZLmSXpB0qWS+qTJ\nj0LSF3L73idpQhlxmplZpubJQpKAu4CfRsRo4CNAf+CCtMtC4Lxax2VmZm0ro2VxCLA2Iq4HiIgN\nZJMgnUo27McsYIWkz5cQm5mZtaKMZLEXMCNfkOa2eBnYPRV9D/i7ohPlJz9aserdLg/UzMwyZSQL\nAdFeeUQ8BiDpU+2dKD/50TYD+nR5oGZmlikjWcwFxucLJA0ERgEv5IovwH0XZmZ1oYxk8TDQT9JJ\nAJJ6kc1pMZlsDgsAIuJBYDDgocrNzEpW82QREQEcAxwnaR7wPLAW+E4ru18AjKxheGZm1oqyJj96\nBfhCK5seTa/m/e4l68swM7MS+QluMzMr1DCjzg4YNtojc5qZVYlbFmZmVsjJwszMCjXMbai33nqe\nyTf8SdlhdEuTTn6w7BDMrM65ZWFmZoWcLMzMrJCThZmZFSpr8qOQdHFu/SxJ5+fWT5I0R9JcSb+X\ndFYZcZqZWaaslsU64EuShrXcIOkw4EzgTyJiL2AcsKLG8ZmZWU5ZyWI9cDXZpEctnQucFRGLACJi\nbURcU8vgzMxsU2X2WVwJnCBpmxblY2gxOVJb8pMfrVr1XpcHaGZmmdKSRZod70bgm504x8bJjwYM\n6N11wZmZ2SbK/jbUJcBXga1zZXOBfcoJx8zMWlNqsoiIpcBtZAmj2YXARZK2B5C0paTNbn2YmVnn\nld2ygGyWvI3fioqI+8n6M34paS5Z/0XDDEtiZtYdlTX5Uf/c8htAvxbbrweur3VcZmbWunpoWZiZ\nWZ1rmNs7Q4d+xKOnmplViVsWZmZWyMnCzMwKNcxtqFeXzeO82w8tO4xu5YLjHig7BDPrJtyyMDOz\nQk4WZmZWqKz5LEZKukfSPEkvSLpUUh9JEyTd12LfyZKOLSNOMzPL1DxZSBJwF/DTiBgNfAToD1xQ\n61jMzKwyZXRwHwKsTU9pExEbJH0LeAl4pIR4zMysQBnJYi9azFcRESslvQzsDnxK0szc5p2ATW5N\nmZlZbZWRLAREO+WPRcSRGwulyW2eSDoNOA1g4LC+XRulmZltVEYH91xgfL5A0kBgFPBCR06Un/yo\n38A+XRiimZnllZEsHgb6SToJQFIvsmHKJwNvlxCPmZkVqHmyiIgAjgGOkzQPeB5YC3yn1rGYmVll\nyprP4hXgC61sejS98vtOqn5EZmbWHj/BbWZmhRpmIMEdB4/2wHhmZlXiloWZmRVysjAzs0JOFmZm\nVqhh+izmLX+Vw3/a8759e//R3y87BDPrAdyyMDOzQk4WZmZWqNRkIWmDpJmS5ki6XVK/3LZjJIWk\nPcqM0czMym9ZvBMRYyNiDPAu8PXctonAr4HjS4nMzMw2KjtZ5D1GNp8FkvoDBwJfxcnCzKx0dZEs\nJG0BHAY8nYqOBh6IiOeBpZLGtXHcaZKmS5r+7koPWGtmVi1lJ4ut0qx404GXgR+l8onALWn5lrT+\nIfn5LPoM7NfaLmZm1gXKfs7inYgYmy+QNJRsnu4xkgLoBYSks9Pw5mZmVmNltyxacyxwY0TsHBFN\nETEKeAk4qOS4zMx6rHpMFhOBu1uU3Qn8eQmxmJkZJd+Gioj+rZRNaKXsspoEZGZmrarHloWZmdWZ\nsju4u8zoQTt6UD0zsyqpqGUhqZ+kv5d0TVofLenI6oZmZmb1otLbUNcD64D90/pC4HtVicjMzOpO\npbehdouIP5M0ESAi3pGkKsbVYfOWLeGIO68pO4xO+9mXv1Z2CGZmH1Jpy+JdSVsBASBpN7KWhpmZ\n9QCVtizOBx4ARkm6mWyQv1OqFZSZmdWXipJFRDwoaQawHyDgryJiSVUjMzOzulHpt6Eejoi3IuJn\nEXFfRCyR9HBnLixppKR7JM2T9KKkKyRtmbbtK+lXkp6T9Kyka/MTI5mZWW21mywk9ZU0BBgmabCk\nIenVBOywuRdNneN3AT+NiNHAaGAr4CJJ2wG3A38bER8F9iS7BTZgc69nZmadU3Qb6nTgTLLEMIPs\nFhTASuDKTlz3EGBtRFwPEBEbJH0L+AOwAbghIqalbQHc0YlrmZlZJ7WbLCLiUuBSSX8ZEZd34XX3\nIks++WutlLQAGAtcWslJJJ0GnAbQd9iQLgzPzMzyKu3gvlzSGOBjQN9c+Y2beV2RvobbSnnFIuJq\n4GqAbXZr8lwXZmZVUmkH9z8Al6fXZ4CLgC924rpzgfEtrjEQ2I6sxbFPJ85tZmZdrNKH8o4FPgu8\nHhGnAHsDW3biug8D/SSdBCCpF3AxcAXwA+BkSZ9s3lnSiZK278T1zMysEypNFu9ExPvA+tQCWAzs\nurkXTZ3WxwDHSpoHvAW8HxEXRMQbwPHAD9JXZ58BPkXWqW5mZiWo9Anu6ZIGAdeQ3SZaDTzVmQtH\nxCukW1mSDgCmSNonImakb0J9qjPnNzOzrlNpB/cZafEqSQ8AAyNidlcFERFTgZ276nxmZta1KkoW\n6QnuzwJExIKWZfVg9OBhHrHVzKxK2k0WkvoC/UhPcPPBV1sH0oknuM3MrHvZnCe4A1hF9s0lMzPr\nASp9gvu7wCXpKeu/B8YB02oRYKXmL1vOF+64u6bX/M9jj6np9czMylLxcxYpURwEfB6YDPywalGZ\nmVldqTRZbEjvRwBXRcQ9QJ/qhGRmZvWm0mTxqqT/AL4C3J/mnaj0WDMz6+Yq/YX/FeAXwKERsRwY\nAvxNZy4s6d8lnZlb/4Wka3PrF0v6tqQ5nbmOmZl1XkXJIiLejoi7ImJeWn8tIh7s5LWnAgcASPoj\nYBjZ0OXNDgAe7+Q1zMysC5R5K+lxUrIgSxJzgFVpRr4tyWbIW1ZWcGZm9oFKx4bqchGxSNJ6STuR\nJY1pwI7A/sAKYDbwbnvnyE9+tNWw4dUN2MysByu7k7q5ddGcLKbl1qcWHRwRV0fE+IgY32fgwKoG\nambWk5WdLJr7Lf6Y7DbUE2QtC/dXmJnVkbKTxePAkcDSiNgQEUuBQWQJo66eEDcz68nKThZPk30L\n6okWZSsiYkk5IZmZWUuldXADRMQGshFs82WTcssLgDG1jcrMzFoqNVl0pd0HD/LAfmZmVVL2bSgz\nM+sGnCzMzKyQk4WZmRVqmD6LF5at4ct3PlWVc9/55X2rcl4zs+7CLQszMyvkZGFmZoWqliwkbZA0\nM/c6J5U/Kuk5SbMlPSvpCkmDcsetbnGeSZKuqFacZmZWrJp9Fu9ExNg2tp0QEdMl9QEuBO4BPl3F\nWMzMrBNKvQ0VEe8CZwM7Sdq7zFjMzKxt1WxZbCVpZm79woi4teVOEbFB0ixgD2BWK8cNAe6tYpxm\nZlagrNtQLamt4yRNAsa3etAmkx9tv5lhmplZkdK/DSWpF9l8Fs909Nj85EdbDhxUfICZmW2WUpOF\npN5kHdyvRMTsMmMxM7O21bLP4oGIOCct3yxpHbAl8EvgqCrGYWZmnVS1ZBERvdoon1BwXP8W65OB\nyV0Vl5mZdVzpfRZmZlb/GmYgwd0Gb+0B/8zMqsQtCzMzK+RkYWZmhZwszMysUMP0Wbyx/D3+7e7X\nu+Rc3z7GT4ObmeW5ZWFmZoWcLMzMrFBNk0VuQqRZkn4r6YBUfreko3P7PSfp73Lrd0r6Ui1jNTOz\nD9S6ZfFORIyNiL2Bc8nGhQKYCjQnjqHAamD/3HH7p33MzKwEZd6GGggsS8uPk5JFer8PGK7MLmRJ\npmt6r83MrMNq/W2o5sEF+wIjgENS+QxgTJpm9QDgv4FdgT2BT5Alkw/Jz2cxePiO1Y3czKwHK+s2\n1B7AocCNkhQR64C5wDhgP+BJYBpZ4jiANm5B5eez2Hrg0NrUwMysByrtNlRETAOGAcNT0VTgYGBA\nRCwDnuCDZNFqy8LMzGqjtGQhaQ+gF/BWKnocOJ1sHm6A2WStjJ3IWh1mZlaSsvosIJt3++SI2JDW\np5L1U1wIEBHrJS0mm0Xv/RrHaWZmOTVNFm1NiJS2LSZLIPmyCdWOyczMivkJbjMzK9QwAwluN6i3\nBwA0M6sStyzMzKyQk4WZmRVqmNtQq5au59Efv1nRvhNOHF68k5mZbeSWhZmZFXKyMDOzQk4WZmZW\nqK6ShaTV6b1J0pyy4zEzs0xdJQszM6tPThZmZlaoWycLSadJmi5p+oqVbxUfYGZmm6VbJ4v85Efb\nePIjM7Oq6dbJwszMasPJwszMCtVzsviopIW513FlB2Rm1lPV1dhQEdE/vS8AepcbjZmZNavnloWZ\nmdWJumpZdMaAIVt4NFkzsypxy8LMzAo5WZiZWaGGuQ313uvv8dpFr21cH3H2iBKjMTNrLG5ZmJlZ\nIScLMzMr5GRhZmaFSk0Wks6TNFfSbEkzJX1SUm9J/yxpnqQ5kp6SdFiZcZqZ9XSldXBL2h84EhgX\nEeskDQP6AP8PGAGMSeXbAZ8uK04zMyv321AjgCURsQ4gIpZI6gd8DdglV/4GcFt5YZqZWZm3oR4E\nRkl6XtL/l/RpYHfg5YhYWckJ8pMfvbXGkx+ZmVVLackiIlYD+wCnAW8CtwITOniOjZMfDd3akx+Z\nmVVLqQ/lRcQG4FHgUUlPA6cDO0kaEBGryozNzMw+UFrLQtJHJY3OFY0FngN+BFwmqU/ab4SkE8uI\n0czMMmW2LPoDl0saBKwH5pPdkloJfA/4vaS1wBrgu6VFaWZm5SWLiJgBHNDG5rPTy8zM6kDDDCTY\ne/veHjzQzKxKPNyHmZkVcrIwM7NCThZmZlaoYZLFe4tXlx2CmVnDaphkYWZm1eNkYWZmhaqWLCSF\npJty61tIelPSfWl9kqQrWjlugaQ7c+vHSppcrTjNzKxYNVsWa4AxkrZK658HXq3w2PGS9qpOWGZm\n1lHVvg31c+CItDwRmFLhcT8AvlOViMzMrMOqnSxuAY6X1Bf4OPBkhcfdBoyTtHt7O+Xns1i6enkn\nQzUzs7ZUNVlExGygiaxVcX8HDt0A/CtwbsH5N85nMaT/oM2O08zM2leLb0PdS3ZbqdJbUM1uAg4G\nduryiMzMrENqkSyuA/4pIp7uyEER8R7w78CZVYnKzMwqVvVkERELI+LSNjZPkrQw9xrZYvuPaKCR\ncc3MuitFRNkxdIm9d9ojZr38bNlhmJl1K5JmRMT4ov38BLeZmRVqmGTRe9v+ZYdgZtawGiZZmJlZ\n9TRMn4WkVcBzZcdRY8OAJWUHUWOuc8/gOtfOzhExvGinRvqm0XOVdNI0EknTXefG5zr3DPVeZ9+G\nMjOzQk4WZmZWqJGSxdVlB1AC17lncJ17hrquc8N0cJuZWfU0UsvCzMyqxMnCzMwKdftkIelQSc9J\nmi/pnLLj6ShJ10laLGlOrmyIpIckzUvvg1O5JF2W6jpb0rjcMSen/edJOjlXvo+kp9Mxl0lSbWv4\nYZJGSXpE0jOS5kr6q1TesPWW1FfSU5JmpTr/YyrfRdKTKf5bJfVJ5Vum9flpe1PuXOem8uck/Wmu\nvC5/FiT1kvQ7Sfel9Yaus6QF6bM3U9L0VNb9P9sR0W1fQC/gBWBXoA8wC/hY2XF1sA4HA+OAObmy\ni4Bz0vI5wL+k5cPJpqoVsB/wZCofAryY3gen5cFp21PA/umYnwOH1UGdRwDj0vIA4HngY41c7xRH\n/7Tcm2zWyP3IZoU8PpVfBXwjLZ8BXJWWjwduTcsfS5/zLYFd0ue/Vz3/LADfBn4C3JfWG7rOwAJg\nWIuybv/Z7u4ti32B+RHxYkS8SzaN61Elx9QhEfErYGmL4qOAG9LyDcDRufIbI/MEMEjSCOBPgYci\nYmlELAMeAg5N2wZGxLTIPmU35s5Vmoh4LSJ+m5ZXAc8AO9LA9U6xr06rvdMrgEOAO1J5yzo3/1vc\nAXw2/QV5FHBLRKyLiJeA+WQ/B3X5s6Bs2oEjgGvTumjwOreh23+2u3uy2BF4Jbe+MJV1d9tFxGuQ\n/WIFtk3lbdW3vfKFrZTXjXSr4RNkf2k3dL3T7ZiZwGKyH/4XgOURsT7tko9zY93S9hXAUDr+b1G2\nS4CzgffT+lAav84BPChphqTTUlm3/2x39+E+WrtX18jfBW6rvh0trwuS+gN3AmdGxMp2br02RL0j\nYgMwVtIg4G5gz9Z2S+8drVtrf/iVWmdJRwKLI2KGpAnNxa3s2jB1Tg6MiEWStgUektTeRDvd5rPd\n3VsWC4FRufWRwKKSYulKb6TmJul9cSpvq77tlY9spbx0knqTJYqbI+KuVNzw9QaIiOXAo2T3qAdJ\nav6jLR/nxrql7duQ3a7s6L9FmQ4EvihpAdktokPIWhqNXGciYlF6X0z2R8G+NMJnu4wOoK56kbWM\nXiTr9Gru4Nqr7Lg2ox5NbNrB/a9s2hl2UVo+gk07w56KDzrDXiLrCBucloekbb9J+zZ3hh1eB/UV\n2b3WS1qUN2y9geHAoLS8FfAYcCRwO5t29p6Rlv+CTTt7b0vLe7FpZ++LZB29df2zAEzggw7uhq0z\nsDUwILc8FTi0ET7bpX+IuuA/53Cyb9O8AJxXdjybEf8U4DXgPbK/Gr5Kdp/2YWBeem/+kAi4MtX1\naWB87jynknX8zQdOyZWPB+akY64gPbVfcp0PIms6zwZmptfhjVxv4OPA71Kd5wDfTeW7kn27ZX76\nJbplKu+b1uen7bvmznVeqtdz5L4JU88/C2yaLBq2zqlus9JrbnNMjfDZ9nAfZmZWqLv3WZiZWQ04\nWZiZWSEnCzMzK+RkYWZmhZwszMyskJOFWR2RdKakfmXHYdaSvzprVkfS087jI2JJ2bGY5bllYdZB\nkk5Kcw/MknSTpJ0lPZzKHpa0U9pvsqRjc8etTu8TJD0q6Q5Jz0q6Oc1r8E1gB+ARSY+UUzuz1nX3\ngQTNakrSXmRPEx8YEUskDSEbcvrGiLhB0qnAZRQPG/0JsmEsFgGPp/NdJunbwGfcsrB645aFWccc\nAtzR/Ms8IpaSTUTzk7T9JrLhTIo8FRELI+J9suFOmqoQq1mXcbIw6xhRPCR08/b1pJ+xNIlPn9w+\n63LLG3Ar3+qck4VZxzwMfEXSUMjmViYbWfT4tP0E4NdpeQGwT1o+imx2vCKryKaaNasr/mvGrAMi\nYq6kC4D/lrSBbCTZbwLXSfob4E3glLT7NcA9kp4iSzJrKrjE1cDPJb0WEZ/p+hqYbR5/ddbMzAr5\nNpSZmRVysjAzs0JOFmZmVsjJwszMCjlZmJlZIScLMzMr5GRhZmaF/gd1mtW5dHFQvQAAAABJRU5E\nrkJggg==\n",
       "text/plain": [
-       "<matplotlib.figure.Figure at 0x1183bf828>"
+       "<matplotlib.figure.Figure at 0x120dd35c0>"
       ]
      },
      "metadata": {},
